[gd_scene load_steps=14 format=4 uid="uid://brhllmdgpj07q"]

[ext_resource type="TileSet" uid="uid://tibl5rc5piad" path="res://Scenes/Game/level_tile_set.tres" id="1_ebmjs"]
[ext_resource type="Script" uid="uid://s5g5xuyidp5p" path="res://Scenes/Game/game.gd" id="1_wrm1d"]
[ext_resource type="PackedScene" uid="uid://b8bjrq16v05pq" path="res://Scenes/Player/player.tscn" id="2_3dryh"]
[ext_resource type="Script" uid="uid://dtw3dow0778l" path="res://Scenes/Level Manager/level.gd" id="2_h4fw4"]
[ext_resource type="PackedScene" uid="uid://dpsv6nrk5dkh" path="res://Scenes/UI/ui.tscn" id="2_v158k"]
[ext_resource type="PackedScene" uid="uid://ke2oqvxlb7wy" path="res://Scenes/Level Manager/level_manager.tscn" id="3_1l0tm"]
[ext_resource type="Resource" uid="uid://dsk55to5nq6ak" path="res://Data/Levels/level_3.tres" id="3_huoen"]
[ext_resource type="Resource" uid="uid://c3uw4nb4g4gxs" path="res://Data/Levels/level_1.tres" id="3_ypmwd"]
[ext_resource type="Resource" uid="uid://3wnmrq1x5qia" path="res://Data/Levels/level_2.tres" id="4_oejk7"]
[ext_resource type="PackedScene" uid="uid://ca6eymbxaw6ld" path="res://Scenes/Power Up/power_up_fairy.tscn" id="6_huoen"]
[ext_resource type="Resource" uid="uid://ctklgd70ap4he" path="res://Data/Levels/level_4.tres" id="6_upfqs"]
[ext_resource type="Script" uid="uid://ognij0033imb" path="res://Scenes/Power Up/power_up_manager.gd" id="7_7jvlm"]
[ext_resource type="AudioStream" uid="uid://wd1goqxq72d6" path="res://Assets/Audio/Action 2 (Loop).ogg" id="9_h4fw4"]

[node name="Game" type="Node2D"]
process_mode = 1
script = ExtResource("1_wrm1d")
levels = Array[ExtResource("2_h4fw4")]([ExtResource("3_ypmwd"), ExtResource("4_oejk7"), ExtResource("3_huoen"), ExtResource("6_upfqs")])

[node name="UI" parent="." instance=ExtResource("2_v158k")]
z_index = 4
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 240.0
offset_bottom = 160.0

[node name="LevelManager" parent="." node_paths=PackedStringArray("_enemies", "_power_up_manager") instance=ExtResource("3_1l0tm")]
_enemies = NodePath("../Enemies")
_power_up_manager = NodePath("../PowerUpManager")

[node name="Firebolts" type="Node2D" parent="."]
z_index = 3

[node name="Enemies" type="Node2D" parent="."]

[node name="PowerUpManager" type="Node2D" parent="."]
z_index = 3
script = ExtResource("7_7jvlm")
_power_up_fairy_scene = ExtResource("6_huoen")

[node name="Player" parent="." instance=ExtResource("2_3dryh")]
z_index = 3
position = Vector2(16, 32)

[node name="LevelMapLayer" type="TileMapLayer" parent="."]
z_index = 2
tile_map_data = PackedByteArray("AAACAAEAAAASAA0AAAACAAIAAAASAA4AAAACAAMAAAASAA4AAAACAAQAAAASAA4AAAACAAUAAAASAA4AAAAAAAEAAAARAA0AAAABAAEAAAARAA0AAAACAAYAAAASAA4AAAACAAcAAAASAA4AAAACAAgAAAASAA8AAAABAAgAAAARAA8AAAAAAAgAAAARAA8AAAACAAkAAAAHAA8AAAABAAkAAAAHAA8AAAAAAAkAAAAHAA8AAAADAAEAAAARABUAAAAEAAEAAAARABUAAAAFAAEAAAARABUAAAAGAAEAAAARABUAAAAHAAEAAAARABUAAAAIAAEAAAARABUAAAAJAAEAAAARABUAAAAKAAEAAAARABUAAAALAAEAAAARABUAAAAMAAEAAAARABUAAAANAAEAAAARABUAAAAOAAEAAAARABUAAAADAAgAAAARABAAAAAEAAgAAAARABAAAAAFAAgAAAARABAAAAAGAAgAAAARABAAAAAHAAgAAAARABAAAAAIAAgAAAARABAAAAAJAAgAAAARABAAAAAKAAgAAAARABAAAAALAAgAAAARABAAAAAMAAgAAAARABAAAAANAAgAAAARABAAAAAOAAgAAAARABAAAAA=")
tile_set = ExtResource("1_ebmjs")

[node name="TowerColorRect" type="ColorRect" parent="."]
z_index = 1
offset_top = 17.0
offset_right = 47.0
offset_bottom = 159.0
color = Color(0.117647, 0.0784314, 0.196078, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(120, 80)
zoom = Vector2(4, 4)

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_h4fw4")
bus = &"Music"
parameters/looping = false

[node name="FirstLevelDelayTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="lose_no_button_pressed" from="UI" to="." method="_on_start_menu_button_pressed"]
[connection signal="lose_yes_button_pressed" from="UI" to="." method="_on_restart_button_pressed"]
[connection signal="pause_game_pressed" from="UI" to="." method="_on_ui_pause_game_pressed"]
[connection signal="pause_menu_back_button_pressed" from="UI" to="." method="_on_ui_pause_menu_back_button_pressed"]
[connection signal="pause_menu_quit_button_pressed" from="UI" to="." method="_on_ui_pause_menu_quit_button_pressed"]
[connection signal="win_no_button_pressed" from="UI" to="." method="_on_start_menu_button_pressed"]
[connection signal="win_yes_button_pressed" from="UI" to="." method="_on_restart_button_pressed"]
[connection signal="level_index_updated" from="LevelManager" to="." method="_on_enemy_manager_level_index_updated"]
[connection signal="timeout" from="FirstLevelDelayTimer" to="." method="_on_first_level_delay_timer_timeout"]
